@media for medium displays

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -441,8 +441,58 @@ body.hasHover .back-button img:hover {
 
 /* rules for medium size display */
 @media screen and (max-width: 1024px) {
+    :root {
+        overflow-y: scroll;
+        scroll-snap-type: y mandatory;
+    }
+    header {
+        scroll-snap-align: start;
+    }
+    .card {
+        flex: 50%;
+        opacity: 0.8;
+        scroll-snap-align: center;
+        transition: 0.5s ease;
+    }
+    .project-name-container {
+        transition: 0.3s ease 0.3s;
+    }
+    .card.hasFocus {
+        opacity: 1;
+        filter: grayscale(0);
+        box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+    }
+    .card.hasFocus .project-name-container {
+        visibility: visible;
+        opacity: 1;
+        animation-name: slide-mobile;
+        animation-duration: 0.3s;
+        animation-iteration-count: 1;
+        animation-delay: 0.3s;
+    }
+    .card.lostFocus .project-name-container {
+        visibility: hidden;
+        opacity: 0;
+        animation-name: slide-mobile-rev;
+        animation-duration: 0.3s;
+        animation-iteration-count: 1;
+        animation-delay: 0.3s;
+    }
     .about-container {
         width: 80%;
+    }
+    .about-footer {
+        position: relative;
+    }
+    .project-desc {
+        width: 80%;
+    }
+    .back-button img:active {
+        opacity: 1;
+    }
+    .back-button img {
+        height: 25px;
+        width: 25px;
     }
 }
 
