max-width on card class

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -113,6 +113,7 @@ body.hasHover .active:active {
 .card {
     flex: 25%;
     height: 350px;
+    max-width: fit-content;
     margin: 2rem;
     opacity: 1;
     overflow: hidden;
