--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -50,6 +50,11 @@ body {
     padding: 0;
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
 header {
     display: flex;
     justify-content: space-between;
